app/assets/stylesheets/custom.css.scss
/*Specify the fonts to use for the site, in the order in which they should be used*/
$baseFontFamily: Oxygen, FontAwesome, Arial;

/*import google's Oxygen font*/
@import url(http://fonts.googleapis.com/css?family=Oxygen);

/*import font awesome icon font*/
@import "font-awesome";

/* ************************************************************************ */
/* Note: If you import twitter bootstrap above navbar and button tweaks, it */
/* can cause the tweaks to not load. Be sure bootstrap imports happen below */
/* this section                                                             */
/* ************************************************************************ */

/*Navbar tweaks 
$navbarBackground: lightgreen;
$navbarBackgroundHighlight: green;
$navbarLinkBackgroundHover: lightgreen;
$navbarBrandColor: white;
$navbarLinkColor: white;
*/
.navbar.navbar-default {
  background-color: #8fd662;
  border-color: #3fa917;
}
.navbar.navbar-default .navbar-brand {
	color: #fffffa;
}
.navbar.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
	color: #dad5d5;
}
.navbar.navbar-default .navbar-text {
	color: #fffffa;
}
.navbar.navbar-default .navbar-nav > li > a {
	color: #fffffa;
}
.navbar.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
	color: #dad5d5;
}
.navbar.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
	color: #dad5d5;
	background-color: #3fa917;
}
.navbar.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
	color: #dad5d5;
	background-color: #3fa917;
}
.navbar.navbar-default .navbar-toggle {
	border-color: #3fa917;
}
.navbar.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
	background-color: #3fa917;
}
.navbar.navbar-default .navbar-toggle .icon-bar {
	background-color: #fffffa;
}
.navbar.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
	border-color: #fffffa;
}
.navbar.navbar-default .navbar-link {
	color: #fffffa;
}
.navbar.navbar-default .navbar-link:hover {
	color: #dad5d5;
}

@media (max-width: 767px) {
	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
		color: #fffffa;
	}
	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
		color: #dad5d5;
	}
	.navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
		color: #dad5d5;
		background-color: #3fa917;
	}
}

/*Great big button tweaks 
$btnPrimaryBackground: #fcfcfc;
$btnPrimaryBackgroundHighlight: lightgreen;
*/
.btn.btn-success {
    color: #ffffff;
    background-color: #39ac3;
    background-image: linear-gradient(to bottom, #359635, #90ee90);
    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.1);
}
.btn.btn-success:hover {
    color: #ffffff;
    background-color: #90ee90;
    background-image: linear-gradient(to bottom, #90ee90, #90ee90);
    border-color: #62c462 #3E8F3E #3E8F3E;
}
/*
*Safe to import twitter bootstrap css
*/
@import 'bootstrap';

/*Set a large padding at page top to accomodate fixed-to-top nav bar*/
body{
  padding-top: 30px;
}

a:link{
  color: lightgreen;
  text-decoration: none;
}
a:hover{
  color: lightgreen;
  text-decoration:underline;
}

.nav li{  
  padding-left: 0px; 
  padding-right: 0px;   
}  

.marketing-byline, h1, h2{
  text-align: center;
}

.jumbotron{
  padding-top:-80px;
  position: relative;
  text-align: center;
  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4), 0px 0px 30px rgba(0, 0, 0, 0.075);
  background: linear-gradient(45deg, rgb(2, 54, 2) 0%, rgb(6, 153, 6) 100%) repeat scroll 0% 0% transparent;
  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.2) inset, 0px -3px 7px rgba(0, 0, 0, 0.2) inset;
}

.masthead{
  padding: 70px 0px 80px;
  margin-bottom: 0px;
  color: rgb(255, 255, 255);
}

/* *********************************** */
/* Safe to import bootstrap below here */
/* *********************************** */

.hero-unit {
  background: dce8dc;
  color: #003800;
  box-shadow: 1px 1px 5px gray;
  margin-bottom: 40px;
  margin-top: 40px;
  padding: 20px 20px 20px;
}

/* ************************************
WHEN ILLUSTRATION IS READY
USE THIS TO GIVE HERO UNIT AN IMAGE BACKGROUND:

 .hero-unit {
    background: url(IMAGE.png) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border: 1px solid #dadada;
    color: #333;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .075);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.075);
    box-shadow: 0 1px 2px rgba(0, 0, 0, .075);
    text-shadow: 0em 0em 1.8em #fff; }

 ************************************** */

/*Used by jQuery Masonry for "pinterest style" self-adjusting image block layout */

.box{
  display: block;
  margin: 5px;
  padding: 5px;
  font-size: 11px;
  color: #000;
  line-height: 1.4em;
  float: left;
  background-color: grayLight;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  box-shadow: 1px 1px 10px #458B00;
  width: 214px;
}

.box img{
  display: block;
  width: 100%;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.box a{
  color: #666;
  text-decoration: underline;
  padding-left: 2px;
}

.box a:hover{
  color: #333;
}

.description{
  margin: 10px 0px 5px;
  color: #000;
}

.center{
  margin-right: auto;
  margin-left: auto;
  text-align: center;
}

#footer{
  background-color: green;
  margin-top: 50px;
  color: #FFF;
}

#footer a{
  color: lightgreen;
}
#footer a:visited{
  color: #DDD;
} 

.pins_pagination a, .pins_pagination span{
  padding: 0.2em 0.3em; 
}

.pins_pagination{
  text-align: center;
}

.pins_pagination .disabled{
  color: #aaaaaa; }

.pins_pagination .current{
  font-style: normal;
  font-weight: bold;
  color: white;
  background: linear-gradient(45deg, lightgreen 0%, rgb(6, 153, 6) 100%) repeat scroll 0% 0% transparent;
  text-align: center;
  display: inline-block;
  width: 1.4em;
  height: 1.4em;
  line-height: 1.5;
  -moz-border-radius: 1em;
  -webkit-border-radius: 1em;
  border-radius: 1em;
}

.pins_pagination a{
  text-decoration: none;
  color: green; 
}

.pins_pagination a:hover, .pins_pagination a:focus{
  text-decoration: underline; 
}

.approved{
  background-color: gray;
}

.approval{
  color: white;
  background-color: red;
}

